--- a/index.html
+++ b/index.html
@@ -83,11 +83,31 @@
     <div class="header-bottom">
         <div class="header-container container">
             <ul class="header_img_menu_item">
-                <li class="header__img__link"><a href="#" class="header__img__link__a">Реализм</a></li>
-                <li class="header__img__link"><a href="#" class="header__img__link__a">Импрессионизм</a></li>
-                <li class="header__img__link"><a href="#" class="header__img__link__a">Постимпрессионизм</a></li>
-                <li class="header__img__link"><a href="#" class="header__img__link__a">Авангард</a></li>
-                <li class="header__img__link"><a href="#" class="header__img__link__a">Футуризм</a></li>
+                <li class="header__img__link"><a href="#" class="header__img__link__a">Реализм 
+                    <svg class="header__img__svg" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 1L6 6.00001L0.999997 1" stroke="white"/>
+                        </svg>
+                </a></li>
+                <li class="header__img__link"><a href="#" class="header__img__link__a">Импрессионизм
+                    <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 1L6 6.00001L0.999997 1" stroke="white"/>
+                        </svg>
+                </a></li>
+                <li class="header__img__link"><a href="#" class="header__img__link__a">Постимпрессионизм
+                    <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 1L6 6.00001L0.999997 1" stroke="white"/>
+                        </svg>
+                </a></li>
+                <li class="header__img__link"><a href="#" class="header__img__link__a">Авангард
+                    <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 1L6 6.00001L0.999997 1" stroke="white"/>
+                        </svg>
+                </a></li>
+                <li class="header__img__link"><a href="#" class="header__img__link__a">Футуризм
+                    <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 1L6 6.00001L0.999997 1" stroke="white"/>
+                        </svg>
+                </a></li>
             </ul>
             <div class="header__img__menu__search">
                 <form class="search__form" action="">
