--- a/index.html
+++ b/index.html
@@ -1479,6 +1479,9 @@
         <div class="footer__social__icon fb"><a href="#" class="footer__social__icon__block"><span class="visually-hidden">whatsap</span></a></div>
         
     </div>
+
+<!--для теста коммита-->
+
 </footer>
 
 
