--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/choices.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
@@ -88,23 +88,23 @@
                         <path d="M11 1L6 6.00001L0.999997 1" stroke="white"/>
                         </svg>
                 </a></li>
-                <li class="header__img__link"><a href="#" class="header__img__link__a">Импрессионизм
-                    <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <li class="header__img__link"><a href="#" class="header__img__link__a">Импрессионизм 
+                    <svg class="header__img__svg" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M11 1L6 6.00001L0.999997 1" stroke="white"/>
                         </svg>
                 </a></li>
-                <li class="header__img__link"><a href="#" class="header__img__link__a">Постимпрессионизм
-                    <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <li class="header__img__link"><a href="#" class="header__img__link__a">Постимрессионизм 
+                    <svg class="header__img__svg" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M11 1L6 6.00001L0.999997 1" stroke="white"/>
                         </svg>
                 </a></li>
-                <li class="header__img__link"><a href="#" class="header__img__link__a">Авангард
-                    <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <li class="header__img__link"><a href="#" class="header__img__link__a">Авангард 
+                    <svg class="header__img__svg" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M11 1L6 6.00001L0.999997 1" stroke="white"/>
                         </svg>
                 </a></li>
-                <li class="header__img__link"><a href="#" class="header__img__link__a">Футуризм
-                    <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <li class="header__img__link"><a href="#" class="header__img__link__a">Футуризм 
+                    <svg class="header__img__svg" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M11 1L6 6.00001L0.999997 1" stroke="white"/>
                         </svg>
                 </a></li>
@@ -1486,7 +1486,7 @@
 
 
 
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="js/swiper-bundle.min.js"></script>
 <script src="js/swiper-gallery.js"></script>
 <script src="js/script-catalog.js"></script>
 <script src="js/swiper-gallery-publication.js"></script>
